Try to fix mobile view alignment for frontpage, fail miserably

--- a/src/css/partials/mobile.scss
+++ b/src/css/partials/mobile.scss
@@ -1,6 +1,16 @@
 @media only screen
 and (max-width : 400px) {
 
-  //TODO: Fix center alignment on header content for mobile
+  #headshot {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .headerContent {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 380px;
+    text-align: center;
+  }
 
 }
